change amz price table api to version 2

--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -1,6 +1,6 @@
 {
   "name": "Axesso API documentation",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Please contact us to get access to the production API: <a href=\"mailto:support@axesso.de\"><b style=\"font-size:24px;\">support@axesso.de</b></a> <br /> You can also find our SDK @ <a href=\"https://github.com/Axesso/axesso-java-client\"><b style=\"font-size:24px;\">https://github.com/Axesso/axesso-java-client</b></a>",
   "title": "Axesso rest API documentation",
   "url": "http://api-",
@@ -12,8 +12,8 @@
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2020-12-07T20:11:36.704Z",
-    "url": "http://apidocjs.com",
-    "version": "0.17.7"
+    "time": "2021-02-09T11:55:37.962Z",
+    "url": "https://apidocjs.com",
+    "version": "0.25.0"
   }
 }
